Bug 1350301 - Fix broken layout of dominator view with callstacks enabled; r=fitzgen
The shared Frame component appears to set the containing element to be a
flex component, while the table view with the dominators expects an
inline-block element. This appears to have been broken for quite
some time with Bug 1251033.

MozReview-Commit-ID: CYkps6QfTJc

UltraBlame original commit: 116b26438078a2ab6a7b06806b496d9b6ab06d59

--- a/devtools/client/themes/memory.css
+++ b/devtools/client/themes/memory.css
@@ -3152,6 +3152,26 @@ align
 middle
 ;
 }
+.
+heap
+-
+tree
+-
+item
+-
+name
+.
+frame
+-
+link
+{
+display
+:
+inline
+-
+block
+;
+}
 /
 *
 *
